--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <link rel='stylesheet' href='index.css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-  <style type="text/css"></style>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 
 <body>
