Adds more media query styles for smaller screen devices

--- a/index.html
+++ b/index.html
@@ -127,7 +127,36 @@
       <h3>Projects</h3>
     </div>
     <div id='email-content' class='section hide'>
-
+      Email
+    </div>
+  </div>
+  <div id='bottom-bar'>
+    <div id='bottom-bar-items'>
+      <a href='#' id='home'>
+        <div class='item blue'>
+          <i class="fa fa-home"></i>
+        </div>
+      </a>
+      <a href='#' id='resume'>
+        <div class='item green'>
+          <i class="fa fa-file-text-o"></i>
+        </div>
+      </a>
+      <a href='http://www.linkedin.com/profile/view?id=200521904&trk=nav_responsive_tab_profile'>
+        <div class='item purple'>
+          <i class="fa fa-linkedin"></i>
+        </div>
+      </a>
+      <a href='https://github.com/mh120888'>
+        <div class='item yellow'>
+          <i class="fa fa-github"></i>
+        </div>
+      </a>
+      <a href='#' id='email'>
+        <div class='item pink'>
+          <i class="fa fa-envelope-o"></i>
+        </div>
+      </a>
     </div>
   </div>
 </body>
