Adds education section to resume

--- a/index.html
+++ b/index.html
@@ -54,30 +54,44 @@
     <div id='resume-content' class='section hide'>
       <h2>Matthew Higgins</h2>
       <h3>Skills</h3>
-        <ul class='skills right'>
-          <li>HTML5</li>
-          <li>CSS</li>
-          <li>Sass</li>
-          <li>Ruby on Rails</li>
-          <li>Ruby</li>
-          <li>Version control (Git)</li>
-          <li>GitHub</li>
-        </ul>        
-        <ul class='skills left'>
-          <li>Agile Web Development</li>
+        <ul class='skills right hide-for-small'>
+          <li>CSS/Sass</li>
+          <li>Postgresql</li>
+          <li>Heroku</li>
+          <li>Version Control (Git)</li>
           <li>Pair programming</li>
           <li>Test Driven Development</li>
+        </ul>     
+        <ul class='skills left'>
+          <li>Ruby/Ruby on Rails</li>
           <li>RSpec</li>
           <li>Capybara</li>
           <li>Javascript</li>
           <li>jQuery</li>
+          <li>HTML5</li>
+          <span class='small-screen-only'>
+          <li>CSS/Sass</li>
+          <li>Postgresql</li>
+          <li>Heroku</li>
+          <li>Version Control (Git)</li>
+          <li>Pair programming</li>
+          <li>Test Driven Development</li>
+          </span>
         </ul>
       <h3>Work</h3>
         <div class='job'>
-          <span class='job-dates'>5/14 - Present</span>
-          <span class='job-company'>LawKick - </span>
-          <span class='job-title'>Web Developer</span>
-          <span class='job-location'>Los Angeles, CA</span>
+          <a href='#' class='expand-details'>
+            <span class='job-dates'>5/14 - Present</span>
+            <span class='job-company'>LawKick - </span>
+            <span class='job-title'>Web Developer</span>
+            <span class='job-location'>Los Angeles, CA</span>
+            <i class="fa fa-caret-down"></i>
+          </a>
+          <ul class='job-duties hide'>
+            <li>Lead developer for EasyIntake, a cloud-based client intake system for lawyers (currently in beta)</li>
+            <li>Responsible for design and implementation of UI as well as server-side application code (Rails)</li>
+            <li>Manage application deployments to Heroku</li>
+          </ul>
         </div>
         <div class='job'>
           <a href='#' class='expand-details'>
@@ -118,13 +132,36 @@
           </ul>
         </div>
         <div class='job'>
-          <span class='job-dates'>8-11 - 8/12</span>
+          <span class='job-dates'>8/11 - 8/12</span>
           <span class='job-company'>Cornell University - </span>
           <span class='job-title'>Graduate Fellow</span>
           <span class='job-location'>(Ithaca, NY)</span>
         </div>
       <h3>Education</h3>
-      <h3>Projects</h3>
+      <div class='school'>
+        <span class='school-dates'>1/14 - 3/14</span>
+        <span class='school-name'>Dev Bootcamp - </span>
+        <span class='school-degree'>Web Development Bootcamp</span>
+        <span class='school-location'>(San Francisco, CA)</span>
+      </div>
+      <div class='school'>
+        <span class='school-dates'>8/11 - 5/12</span>
+        <span class='school-name'>Cornell University - </span>
+        <span class='school-degree'>Graduate Coursework in French</span>
+        <span class='school-location'>(Ithaca, NY)</span>
+      </div>
+      <div class='school'>
+        <span class='school-dates'>8/10 - 5/11</span>
+        <span class='school-name'>CSU Long Beach - </span>
+        <span class='school-degree'>MA Coursework in French</span>
+        <span class='school-location'>(Long Beach, CA)</span>
+      </div>
+      <div class='school'>
+        <span class='school-dates'>8/07 - 5/10</span>
+        <span class='school-name'>Miami University - </span>
+        <span class='school-degree'>BA French Literature</span>
+        <span class='school-location'>(Oxford, OH)</span>
+      </div>
     </div>
     <div id='email-content' class='section hide'>
       Email
